syntax = "proto3";

package mindbox;

import "google/protobuf/timestamp.proto";

option go_package = "internal/adapters/inbound/grpc;grpc";

service MindboxService {
  rpc GetFinalPriceInfo(GetFinalPriceInfoRequest) returns (GetFinalPriceInfoResponse);
}

message Item {
  string product_id = 1;
  double price = 2;
}

message Promo {
	int32 Id = 1;
	string ExternalId = 2;
	string Type       = 3;
	string Name       = 4;
	string SchemaId   = 5;
    google.protobuf.Timestamp StartDate = 6;
    google.protobuf.Timestamp EndDate = 7;
}

message PromoPlaceholder {
	string PhId = 1;
	int32 PromoId = 2;
	string Type = 3;
	string Message = 4;
	repeated string ProductIds = 5;

	Promo Promo = 6;
}

message ImportModel {
    Item FinalPrice = 1;
	repeated Promo Promotions = 2;
    repeated PromoPlaceholder PromoPlaceholder = 3;
}

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
}

// Request/Response messages
message GetFinalPriceInfoRequest {
  string id = 1;
  repeated Item items = 2;
}

message GetFinalPriceInfoResponse {
  string id = 1;
  int32 total_processed = 2;
  int32 total_failed = 3;
  string process_duration = 4;
  repeated ImportModel processed = 5;
  repeated Item failed = 6;
}